--- a/assessment.html
+++ b/assessment.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="Nプログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>js-calc</title>
+    <title>サイト</title>
     <link rel="stylesheet" href="assessment.css" />
 </head>
 <body>
